--- a/app/views/grams/index.html.erb
+++ b/app/views/grams/index.html.erb
@@ -1,4 +1,39 @@
-<h1 class="text-center">Grams Index!</h1>
-<% @grams.each do |gram| %>
-  <div><%= link_to gram.message, gram_path(gram) %></div>
-<% end %>
+<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-3">
+  <% @grams.each do |gram| %>
+    <div class="card">
+      <div class="handle">
+        <%= gram.user.email %>    
+      </div>
+      <%= image_tag gram.picture.url, class: 'img-fluid' %>
+      <p>
+        <%= gram.message %>
+      </p>
+      <div class="gram-actions float-right">
+        <% if current_user && current_user == gram.user %>
+          <%= link_to 'Edit', edit_gram_path(gram) %>
+          <%= link_to 'Destroy', gram_path(gram), method: :delete, data: {confirm: 'Are you sure?'} %>
+        <% end %>
+      </div>
+      <br class="clearfix" />
+      <div class="comments">
+        <h3>Comments</h3>
+
+        <% gram.comments.each do |comment| %>
+          <div class="comment">
+            <span class="comment-handle">
+              <%= comment.user.email %>
+            </div>
+          <%= comment.message %>
+
+        <% end %>
+
+        <h4>Add a comment</h4>
+        <%= simple_form_for Comment.new, url: gram_comments_path(gram) do |f| %>
+          <%= f.input :message %>
+          <%= f.submit 'Post', class: 'my-btn' %>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+
+</div>
